jumbotron borders display property

--- a/jumbotron.html
+++ b/jumbotron.html
@@ -49,6 +49,8 @@
 
     <div class="jumbotron jumbotron-fluid">
       <h1 class="display-4">Fluid Jumbotron without container</h1>
+      <h1 class="display-4 text-center">I centered the text</h1>
+      <footer class="blockquote-footer text-right">Me <cite title="Source Title">Visual Code</cite></footer>
     </div>
 
     <style>
@@ -57,6 +59,7 @@
       }
       #bgimg {
         background-image: url(https://images.unsplash.com/photo-1538991383142-36c4edeaffde?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80);
+        background-position: center;
       }
     </style>
 
